<?xml version="1.0"?> 
<package format="2"> 
<name>learning_python</name> 
<version>0.0.0</version> 
<description>这是学习ROS Python编程的功能包</description> 

<maintainer email="1692697820@qq.com">waveshare</maintainer> 
<license>TODO</license> 
<author email="1692697820@qq.com">waveshare</author> 

<buildtool_depend>catkin</buildtool_depend> 

<build_depend>roscpp</build_depend> 
<build_depend>rospy</build_depend> 
<build_depend>std_msgs</build_depend> 
<build_depend>message_generation</build_depend> 
<build_export_depend>roscpp</build_export_depend>

<build_export_depend>rospy</build_export_depend> 
<build_export_depend>std_msgs</build_export_depend>

<exec_depend>roscpp</exec_depend> 
<exec_depend>rospy</exec_depend> 
<exec_depend>std_msgs</exec_depend> 
<exec_depend>message_runtime</exec_depend> 

<export>
</export>
</package>